fix be deploy